ChatBot-Fin/Extension-ChatBot-Fin/src/textbox.css
/* Popup Container */
#draggableElement {
    text-align: center;
    position: absolute;
    width: 450px;
    height: 650px;
    top: 10%;
    left: 10%;
    background-color: #333;
    border-radius: 15px;
    box-shadow: 5px 0px 10px black;
    overflow-y: auto;
    z-index: 10000;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 20px;
    resize: both;
    min-width: 250px;
    min-height: 80px;
    user-select: text;
}

/* Custom Scrollbar */
#draggableElement::-webkit-scrollbar {
    width: 12px;
}

#draggableElement::-webkit-scrollbar-track {
    background: none;
}

#draggableElement::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
    border: 3px solid transparent;
    background-clip: padding-box;
}

#draggableElement::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

/* Header */
#header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
    background-color: #333;
    border-radius: 15px 15px 0 0;
    padding: 10px;
    cursor: move;
}

#header span {
    font-size: 1.2em;
    font-weight: bold;
}

#header .icon {
    cursor: pointer;
    margin-left: 10px;
}

/* Icon Container */
#icon-container {
    display: flex;
    align-items: center;
}

/* Intro Area */
#intro {
    text-align: center;
}

#intro h2 {
    color: #dddddd;
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: 10px;
}

#intro p {
    font-size: 1em;
}

/* Content Area */
#content {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#inputContainer {
    display: flex;
    align-items: center;
    margin-top: 20px;
    background-color: #444;
    border-radius: 5px;
    padding: 5px 10px;
}

#inputContainer input {
    flex: 1;
    background: none;
    border: none;
    color: white;
    padding: 10px;
}

#inputContainer input:focus {
    outline: none;
    box-shadow: none;
}

#buttonContainer {
    display: flex;
    justify-content: center;
    margin-top: 10px;
}

#buttonContainer button {
    background-color: grey;
    border: none;
    border-radius: 6px;
    padding: 10px 15px;
    color: white;
    cursor: pointer;
    margin: 0 5px;
}

#respons {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

#respons .your_question {
    align-self: flex-end;
    text-align: right;
    background-color: #444;
    border-radius: 10px;
    padding: 8px 15px;
    color: #fff;
    word-wrap: break-word;
    max-width: 80%;
    margin-left: auto;
}

#respons .agent_response {
    align-self: flex-start;
    text-align: left;
    border-radius: 10px;
    padding: 8px 15px;
    color: #fff;
    word-wrap: break-word;
    margin-right: auto;
}

.clear-button,
.sources-button {
    background-color: #444;
    border: none;
    border-radius: 6px;
    padding: 10px 15px;
    color: white;
    cursor: pointer;
    margin-top: 10px;
}

.sources-button {
    background-color: #444;
}

/* Button Row */
.button-row {
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
}

/* Minimized State */
.minimized {
    height: 60px;
    overflow: hidden;
}

.minimized #content,
.minimized #inputContainer,
.minimized #buttonContainer,
.minimized .clear-button,
.minimized .sources-button {
    display: none;
}

/* Sources Window */
#sources_window {
    text-align: left;
    position: absolute;
    width: 450px;
    height: 600px;
    top: 10%;
    left: 29%;
    background-color: #2c3e50;
    border-radius: 15px;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
    overflow-y: auto;
    z-index: 10001;
    color: white;
    padding: 20px;
    resize: both;
    cursor: default;
}

#sources_window::-webkit-scrollbar {
    width: 12px;
}

#sources_window::-webkit-scrollbar-track {
    background: none;
}

#sources_window::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
    border: 3px solid transparent;
    background-clip: padding-box;
}

#sources_window::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

#sources_window_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 2px solid #34495e;
    padding-bottom: 10px;
    margin-bottom: 20px;
}

#sources_window_header h2 {
    font-size: 1.5em;
    font-weight: bold;
    margin: 0;
}

#sources_window_header .icon {
    cursor: pointer;
    font-size: 1.5em;
    color: #ecf0f1;
}

#sources_window ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

#sources_window ul li {
    margin: 10px 0;
}

#sources_window ul li a {
    color: #1abc9c;
    text-decoration: none;
    font-weight: 500;
    word-wrap: break-word;
}

#sources_window ul li a:hover {
    text-decoration: underline;
}

.source-item {
    background-color: #34495e;
    border-radius: 10px;
    padding: 15px;
    margin: 10px 0;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s ease, transform 0.3s ease;
    word-wrap: break-word;
}

.source-item:hover {
    transform: translateY(-5px);
}

/* loading animation for source */
.spinner {
    border: 8px solid #f3f3f3;
    border-top: 8px solid #3498db;
    border-radius: 50%;
    width: 60px;
    height: 60px;
    animation: spin 2s linear infinite;
    margin: 20px auto; /* centering */
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

/* Settings Window */
#settings_window {
    position: absolute;
    top: 50px;
    right: 20px;
    width: 450px;
    height: auto;
    background-color: #2c3e50;
    border-radius: 15px;
    box-shadow: 0px 0px 10px black;
    z-index: 10002;
    color: white;
    padding: 20px;
    display: none;
}

#settings_window label {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

#settings_window input[type="checkbox"] {
    width: 40px;
    height: 20px;
}

/* Model Selection Section */
#model_selection_container {
    margin-top: 20px;
    background-color: #34495e;
    border-radius: 10px;
    padding: 10px;
    cursor: pointer;
}

#model_selection_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.2em;
    font-weight: bold;
}

#model_selection_content {
    display: none;
    margin-top: 10px;
}

.model-selection-item {
    background-color: #2C3E50;
    border-radius: 10px;
    padding: 15px;
    margin: 10px 0;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s ease, transform 0.3s ease;
    word-wrap: break-word;
    cursor: pointer;
}

.model-selection-item.selected-model {
    background-color: #1abc9c; /* Highlight selected models */
    color: white;
}

.model-selection-item:hover {
    transform: translateY(-5px);
}

/* Preferred Links Section */
#preferred_links_container {
    margin-top: 20px;
    background-color: #34495e;
    border-radius: 10px;
    padding: 10px;
    cursor: pointer;
}

#preferred_links_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.2em;
    font-weight: bold;
}

#preferred_links_content {
    display: none;
    margin-top: 10px;
}

.preferred-link-item {
    background-color: #2C3E50;
    border-radius: 10px;
    padding: 15px;
    margin: 10px 0;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s ease, transform 0.3s ease;
    word-wrap: break-word;
}

.preferred-link-item:hover {
    transform: translateY(-5px);
}

#add_link_button {
    background-color: #2C3E50;
    border: none;
    border-radius: 10px;
    padding: 15px;
    margin: 10px 0;
    color: white;
    text-align: center;
    cursor: pointer;
}











/* Additional Popup Container */
#additionalPopup {
    text-align: center;
    position: absolute;
    width: 450px;
    height: 650px;
    top: 10%;
    background-color: #333;
    border-radius: 15px;
    box-shadow: 5px 0px 10px black;
    overflow-y: auto;
    z-index: 10000;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 20px;
    resize: both;
    min-width: 250px;
    min-height: 80px;
    user-select: text;
}

/* Custom Scrollbar */
#additionalPopup::-webkit-scrollbar {
    width: 12px;
}

#additionalPopup::-webkit-scrollbar-track {
    background: none;
}

#additionalPopup::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
    border: 3px solid transparent;
    background-clip: padding-box;
}

#additionalPopup::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

/* Header */
#additionalHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
    padding: 10px;
    cursor: move;
}

#additionalHeader span {
    font-size: 1.2em;
    font-weight: bold;
}

/* Content Area */
#additionalContent {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* Response */
#additionalPopup #respons {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    text-align: left;
    border-radius: 10px;
    padding: 8px 15px;
    color: #fff;
    word-wrap: break-word;
    margin-right: auto;
}

.your_question {
    align-self: flex-end;
    text-align: right;
    background-color: #444;
    border-radius: 10px;
    padding: 8px 15px;
    color: #fff;
    word-wrap: break-word;
    max-width: 80%;
    margin-left: auto;
}

.agent_response {
    align-self: flex-start;
    text-align: left;
    border-radius: 10px;
    padding: 8px 15px;
    color: #fff;
    word-wrap: break-word;
    margin-right: auto;
}

/* additional pop up to the right of the main pop up */
/*#additionalPopup {*/
/*    left: calc(100% + 20px);*/
/*    top: 10%;*/
/*}*/

/*#additionalPopup #respons .agent_response {*/
/*    align-self: flex-start;*/
/*    text-align: left;*/
/*    border-radius: 10px;*/
/*    padding: 8px 15px;*/
/*    color: #fff;*/
/*    word-wrap: break-word;*/
/*    margin-right: auto;*/
/*}*/












/* Light Mode Styles */
.light-mode #draggableElement,
.light-mode #sources_window {
    background-color: #ddd;
    color: black;
}

.light-mode #inputContainer {
    background-color: #eee;
}

.light-mode #header,
.light-mode #sources_window_header {
    background-color: #ddd;
}

.light-mode #buttonContainer button {
    color: white; /* Button text remains white */
}

.light-mode .clear-button,
.light-mode .sources-button {
    color: white; /* Button text remains white */
}

